[package]
name = "smartcat"
version = "2.2.0"
authors = ["Emilien Fugier <mail@emilienfugier.net>"]
description = '''
Putting a brain behind `cat`.
CLI interface to bring language models in the Unix ecosystem 🐈‍⬛
'''
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/efugier/smartcat"
repository = "https://github.com/efugier/smartcat"
keywords = ["cli", "pipe", "cat", "ai", "chatgpt"]
categories = ["command-line-utilities", "text-processing"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
env_logger = "0"
reqwest = { version = "0", default-features = false, features = ["http2", "json", "blocking", "multipart", "rustls-tls"] }
regex = "1.11.1"

[dev-dependencies]
tempfile = "3"
serial_test = "2"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[[bin]]
path = "src/main.rs"
name = "sc"

[package.metadata.deb]
section = "utils"
assets = [
  ["target/release/sc", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/smartcat/", "644"],
  ["CHANGELOG.md", "usr/share/doc/smartcat/CHANGELOG", "644"],
  ["README.md", "usr/share/doc/smartcat/README", "644"],
]
extended-description = """\
Putting a brain behind `cat`.
CLI interface to bring language models in the Unix ecosystem 🐈‍⬛
"""
